# software_challenge

./: CMakeLists.txt  README.md  package.xml
action/: waypoint.action
launch/: launcher.launch
msg/: distance.msg
src/: assignment_node.cpp  waypoint_client.cpp  waypoint_server.cpp
